visual studio app 환경변수 설정 포스트 업데이트

--- a/_posts/2018-10-30-blog-post.md
+++ b/_posts/2018-10-30-blog-post.md
@@ -10,7 +10,7 @@ categories: [blog]
 
 ## bundle exec jekyll --watch
 
-Run jekyll
+md 파일 업데이트 한뒤 다음을 실행하면 html 파일들이 수정된다.
 
 {% highlight css %}
 bundle exec jekyll --watch
